# obsr

./: .dockerignore  .env.selfhost.example  .gitignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE-OVERVIEW-FUTURE.md  ARCHITECTURE.md  BETTER_AUTH_CLEAN_MIGRATION_PLAN.md  NEXT_PR.md  PLAN-check-output-formatting.md  PLAN-invitations.md  PLAN-org-settings.md  PLAN-step-tracking.md  PLAN-tool-detection-transparency.md  PLAN-webhook-architecture-review.md  README.md  SPEC-01-convex-backend.md  SPEC-02-ai-sdk-healing-loop.md  SPEC-03-heal-flow-integrity.md  SPEC-04-extraction-pipeline.md  SPEC-05-sandbox-security.md  biome.jsonc  conductor.json  package.json  release-please-config.json  scalar.config.json  test-error.ts  turbo.json
.claude/: ARCHITECTURE.md  (+3 more)
apps/cli/: .env  .env.example  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  package.json  tsconfig.json
apps/cli/docs/: environment.md
apps/cli/scripts/: build-binaries.ts  upload-binaries.ts
apps/cli/src/: auth.rs  cli.rs  commands.rs  config.rs  credentials.rs  error.rs  index.ts  lib.rs  main.rs  observe.rs  output.rs  settings.rs  version.ts
apps/cli/src/commands/: create.ts  errors.ts  index.ts  init.tsx  start.ts  update.ts  version.ts  whoami.ts
apps/cli/src/lib/: api.test.ts  api.ts  auth.ts  config.test.ts  config.ts  credentials.test.ts  credentials.ts  debug.test.ts  debug.ts  env.ts  errors.ts  localhost-server.ts  path-safety.test.ts  path-safety.ts  preferences.ts  require-link.ts  sentry.ts
apps/cli/src/templates/: compose.yaml  env.selfhost.example
apps/cli/src/tui/: styles.ts
(+950 files in other folders)
