[package]
name = "dt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
urlencoding = "2.1.3"
